The implementation of saving reservations in the database. Part 1